# validated-slice

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
src/: lib.rs  macros.rs
src/macros/: borrowed.rs  owned.rs
tests/: ascii_str.rs  nostd_alloc_ascii_str.rs  nostd_ascii_str.rs  plain_str.rs
