[package]
name = "validated-slice"
version = "0.2.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Helper macros to implement std traits for custom validated slice types"
repository = "https://github.com/lo48576/validated-slice"
keywords = ["custom", "slice", "string", "validation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[dependencies]

[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lo48576/validated-slice" }
